syntax = "proto3";

package irc;

option go_package = "github.com/presbrey/pkg/ircd/proto";

service IRCPeer {
  // Relay a message from one server to another
  rpc RelayMessage(MessageRequest) returns (MessageResponse) {}
  
  // Sync server state between peers
  rpc SyncState(SyncRequest) returns (SyncResponse) {}
  
  // Notify a peer about a new client
  rpc ClientJoined(ClientInfo) returns (StatusResponse) {}
  
  // Notify a peer about a client that left
  rpc ClientLeft(ClientInfo) returns (StatusResponse) {}
}

message MessageRequest {
  string sender_server = 1;
  string origin_nick = 2;
  string origin_user = 3;
  string origin_host = 4;
  string command = 5;
  repeated string params = 6;
}

message MessageResponse {
  bool success = 1;
  string error_message = 2;
}

message SyncRequest {
  string sender_server = 1;
  repeated ChannelInfo channels = 2;
  repeated ClientDetail clients = 3;
}

message SyncResponse {
  bool success = 1;
  string error_message = 2;
}

message ClientInfo {
  string nickname = 1;
  string username = 2;
  string hostname = 3;
  string realname = 4;
  bool is_operator = 5;
  string server_name = 6;
}

message StatusResponse {
  bool success = 1;
  string error_message = 2;
}

message ChannelInfo {
  string name = 1;
  string topic = 2;
  string modes = 3;
  repeated string clients = 4;
  repeated string operators = 5;
}

message ClientDetail {
  string nickname = 1;
  string username = 2;
  string hostname = 3;
  string realname = 4;
  bool is_operator = 5;
  repeated string channels = 6;
}